sdkdir=$(includedir)/codeblocks/propgrid/include/wx/propgrid

sdk_HEADERS = ./include/wx/propgrid/advprops.h \
			./include/wx/propgrid/extras.h \
			./include/wx/propgrid/manager.h \
			./include/wx/propgrid/odcombo.h \
			./include/wx/propgrid/pg_dox_mainpage.h \
			./include/wx/propgrid/propdev.h \
			./include/wx/propgrid/propgrid.h
