sdkdir=$(includedir)/codeblocks/wxFlatNotebook

sdk_HEADERS = include/wx/wxFlatNotebook/wxFNBDropTarget.h \
							include/wx/wxFlatNotebook/wxFlatNotebook.h \
							include/wx/wxFlatNotebook/fnb_resources.h \
							include/wx/wxFlatNotebook/popup_dlg.h \
							include/wx/wxFlatNotebook/renderer.h \
							include/wx/wxFlatNotebook/singleton.h \
							include/wx/wxFlatNotebook/smart_ptr.h
