sdkdir=$(includedir)/codeblocks/wxFlatNotebook

sdk_HEADERS = include/wx/wxFlatNotebook/fnb_customize_dlg.h \
		include/wx/wxFlatNotebook/fnb_resources.h \
		include/wx/wxFlatNotebook/fnb_singleton.h \
		include/wx/wxFlatNotebook/fnb_smart_ptr.h \
		include/wx/wxFlatNotebook/popup_dlg.h \
		include/wx/wxFlatNotebook/renderer.h \
		include/wx/wxFlatNotebook/wxFlatNotebook.h \
		include/wx/wxFlatNotebook/wxFNBDropTarget.h \
		include/wx/wxFlatNotebook/xh_fnb.h