if BUILD_BYOGAMES
MAYBE_BYOGAMES=byogames
endif

if BUILD_CBKODERS
MAYBE_CBKODERS=cb_koders
endif

if BUILD_CODESNIPPETS
MAYBE_CODESNIPPETS=codesnippets
endif

if BUILD_CODESTAT
MAYBE_CODESTAT=codestat
endif

if BUILD_DRAGSCROLL
MAYBE_DRAGSCROLL=dragscroll
endif

if BUILD_ENVVARS
MAYBE_ENVVARS=envvars
endif

if BUILD_HELP
MAYBE_HELP=help_plugin
endif

if BUILD_KEYBINDER
MAYBE_KEYBINDER=keybinder
endif

if BUILD_LIBFINDER
MAYBE_LIBFINDER=lib_finder
endif

if BUILD_PROFILER
MAYBE_PROFILER=profiler
endif

if BUILD_REGEX
MAYBE_REGEX=regex_testbed
endif

if BUILD_EXPORTER
MAYBE_EXPORTER=source_exporter
endif

if BUILD_SYMTAB
MAYBE_SYMTAB=symtab
endif

if BUILD_WXSMITH
MAYBE_WXSMITH=wxSmith wxSmithContribItems
endif

SUBDIRS = $(MAYBE_BYOGAMES) \
		$(MAYBE_CBKODERS) \
		$(MAYBE_CODESNIPPETS) \
		$(MAYBE_CODESTAT) \
		$(MAYBE_DRAGSCROLL) \
		$(MAYBE_ENVVARS) \
		$(MAYBE_HELP) \
		$(MAYBE_KEYBINDER) \
		$(MAYBE_LIBFINDER) \
		$(MAYBE_PROFILER) \
		$(MAYBE_EXPORTER) \
		$(MAYBE_SYMTAB) \
		$(MAYBE_REGEX) \
		$(MAYBE_WXSMITH)

DIST_SUBDIRS = byogames \
		cb_koders \
		codesnippets \
		codestat \
		dragscroll \
		envvars \
		help_plugin \
		keybinder \
		lib_finder \
		profiler \
		source_exporter \
		symtab \
		regex_testbed \
		wxSmith \
		wxSmithContribItems

